ADD_LIBRARY(Training)
SET_PROPERTY(TARGET Training PROPERTY CXX_STANDARD 14)

target_include_directories(Training PRIVATE
    ../_Utility 
    ../clintlib
    ../Effect
    ../engine 
    ../Igc
    ../Inc 
    ../lib/boost
    ../Lib/directx/include
    ../Lib/lua/include
    ../Lib/sol/include
    ../Lib/Steam
    ../lobby
    ../soundengine 
    ../ui
    ../WinTrek
    ../zlib 
    ../Zone
)

target_sources(Training PRIVATE
    AbstractTarget.cpp
    Action.cpp
    actionlist.cpp
    AddRespawnAction.cpp
    andcondition.cpp
    CommandAcknowledgedCondition.cpp
    Condition.cpp
    conditionalaction.cpp
    conditionlist.cpp
    CreateDroneAction.cpp
    CreateObjectAction.cpp
    CreateProbeAction.cpp
    CreateWaypointAction.cpp
    CurrentTarget.cpp
    DoDamageAction.cpp
    DoDamageAdjustableAction.cpp
    endmissionaction.cpp
    GetAutopilotCondition.cpp
    GetChatCondition.cpp
    GetCommandCondition.cpp
    GetControlActiveCondition.cpp
    GetKeyCondition.cpp
    GetPickedCondition.cpp
    GetProbeCountCondition.cpp
    GetRadarLODCondition.cpp
    GetSectorCondition.cpp
    GetShipHasAmmoCondition.cpp
    GetShipHasCargoCondition.cpp
    GetShipHasMountedCondition.cpp
    GetShipIsDamagedCondition.cpp
    GetShipIsStoppedCondition.cpp
    GetStateBitsCondition.cpp
    GetTargetCondition.cpp
    GetViewSectorCondition.cpp
    Goal.cpp
    goallist.cpp
    KillsReachedCondition.cpp
    messageaction.cpp
    mission10.cpp
    mission2.cpp
    mission3.cpp
    mission4.cpp
    mission5.cpp
    mission6.cpp
    mission8.cpp
    ModifyCreateDroneActionAction.cpp
    noaction.cpp
    ntimescondition.cpp
    objectmovingtowardscondition.cpp
    objectpointingatcondition.cpp
    objectwithinradiuscondition.cpp
    onetimeaction.cpp
    orcondition.cpp
    pch.cpp
    periodiccondition.cpp
    PlayerShipTarget.cpp
    playsoundaction.cpp
    Predicate.cpp
    ProxyAction.cpp
    ProxyCondition.cpp
    ReleaseConsumerAction.cpp
    RepairRearmAction.cpp
    resetaction.cpp
    resetshipaction.cpp
    SetAutopilotAction.cpp
    SetCargoNanAction.cpp
    setcommandaction.cpp
    SetControlConstraintsAction.cpp
    SetControlsAction.cpp
    setdisplaymodeaction.cpp
    SetDroneNanAction.cpp
    SetHUDOverlayAction.cpp
    SetRadarLODAction.cpp
    SetSignatureAction.cpp
    ShipSeesObjectCondition.cpp
    ShowEyeballAction.cpp
    ShowPaneAction.cpp
    soundfinishedcondition.cpp
    SuspendedPlaySoundAction.cpp
    SuspendedSoundFinishedCondition.cpp
    SwapWeaponAction.cpp
    ToggleWeaponAction.cpp
    Training.cpp
    trainingmission.cpp
    truecondition.cpp
    TurnShipAboutCondition.cpp
    TurnToAction.cpp
    TypeIDTarget.cpp
    #
    AbstractTarget.h
    Action.h
    actionlist.h
    AddRespawnAction.h
    andcondition.h
    CommandAcknowledgedCondition.h
    Condition.h
    conditionalaction.h
    conditionlist.h
    CreateDroneAction.h
    CreateObjectAction.h
    CreateProbeAction.h
    CreateWaypointAction.h
    CurrentTarget.h
    DoDamageAction.h
    DoDamageAdjustableAction.h
    elapsedtimecondition.h
    endmissionaction.h
    falsecondition.h
    GetAutopilotCondition.h
    GetChatCondition.h
    GetCommandCondition.h
    GetControlActiveCondition.h
    GetKeyCondition.h
    GetPickedCondition.h
    GetProbeCountCondition.h
    GetRadarLODCondition.h
    GetSectorCondition.h
    GetShipHasAmmoCondition.h
    GetShipHasCargoCondition.h
    GetShipHasMountedCondition.h
    GetShipIsDamagedCondition.h
    GetShipIsDestroyedCondition.h
    GetShipIsStoppedCondition.h
    GetStateBitsCondition.h
    GetTargetCondition.h
    GetViewSectorCondition.h
    Goal.h
    goallist.h
    KillsReachedCondition.h
    messageaction.h
    mission10.h
    Mission2.h
    Mission3.h
    Mission4.h
    Mission5.h
    mission6.h
    mission8.h
    ModifyCreateDroneActionAction.h
    noaction.h
    notcondition.h
    ntimescondition.h
    objectmovingtowardscondition.h
    objectpointingatcondition.h
    objectwithinradiuscondition.h
    onetimeaction.h
    orcondition.h
    pch.h
    periodiccondition.h
    PlayerShipTarget.h
    playsoundaction.h
    Predicate.h
    ProxyAction.h
    ProxyCondition.h
    ReleaseConsumerAction.h
    RepairRearmAction.h
    resetaction.h
    resetshipaction.h
    SetAutopilotAction.h
    SetCargoNanAction.h
    setcommandaction.h
    SetControlConstraintsAction.h
    SetControlsAction.h
    setdisplaymodeaction.h
    SetDroneNanAction.h
    SetHUDOverlayAction.h
    SetRadarLODAction.h
    SetSignatureAction.h
    ShipSeesObjectCondition.h
    ShowEyeballAction.h
    ShowPaneAction.h
    soundfinishedcondition.h
    SuspendedPlaySoundAction.h
    SuspendedSoundFinishedCondition.h
    SwapWeaponAction.h
    ToggleWeaponAction.h
    Training.h
    trainingmission.h
    truecondition.h
    TurnShipAboutCondition.h
    TurnToAction.h
    TypeIDTarget.h
)